_assets/stylesheets/_components.site-nav.scss
/* exclusively classes, use variables to extend */
/* there's no flexbox use with bem since everything is flat.*/

// nav structure
// html - body - site__wrapper
// site__wrapper - site__header
// header - title + wrapper of nav
// title - logo
// wrapper - nav
// nav - a, ul, li

.site {
    &__header {
        //explicit declaration of width (max-width), with margin centering if needed
        width: 100%;
        height: auto;
        max-width: 960px;
        margin: auto;
        text-align: center;

        &-wrapper {
            // segment for fixing the nav bar to the top of the viewport
            // also serves as a general wrapper
            position: fixed;
            left: 0;
            top: 0;
            width: 100%;
            margin-top: 20px;
            height: auto;
            //need to specify z-index for fixed/absolute elements
            z-index: 100;
        }
    }

    &__logo {
        display: block;
        overflow: hidden; // deals with the flickering when hovered at a certain location
        // set width and height of parent element of svg to the native svg size
        width: 124px;
        height: 84px;
        position: fixed;
        //the following centers the absolute element.
        top: 0; left: 0; right: 0;
        margin: 20px auto 0;
        //set z-index so that it is above the other elements, not behind
        z-index: 100;

        -webkit-transition: all 2s ease-in-out;
        transition: all 2s ease-in-out;

        &.site__logo--hero {
            @media (max-width: 720px) {
                width: 248px;
                height: 168px;
                top: 50%;
                margin: -84px auto 0;
            }

            @media (min-width: 721px) {
                width: 372px;
                height: 252px;
                top: 50%;
                margin: -126px auto 0;
            }
        }
    }

     // all nav customization
    &__nav {

        font-family: $font-stack-header;
        font-size: 1.2rem;
      //  font-weight: bold;
       // letter-spacing: 0.0175rem;
        text-transform: uppercase;

        ul {
            display: flex;
            list-style: none;
        }

        a {
            display: block;
            color: black;
            text-decoration: none;

            &:link {
                background-color: $secondary-light;
            }

            &[class="active"] {
                background-color: $primary-color;
            }

            &:hover {
                background-color: $primary-light;
            }
        }

        @media (max-width: 720px) {
            margin-top: 24px;
            padding-top: 60px;
            background-color: $secondary-light;

            ul {
                flex-direction: column;
            }

            li {
                &:first-child {
                    order: 1;
                }

                &:nth-child(2) {
                    order: 4;
                }

                &:nth-child(3) {
                    order: 2;
                }

                &:last-child {
                    order: 3;
                }
            }

            a {
                padding: 0.5em 0;
            }
        }

        @media (min-width: 721px) {
            li {
                display: inline-block;


                &:first-child {
                    order: 1;
                    margin-right: 50px;
                }

                &:nth-child(2) {
                    order: 4;
                    margin-left: 50px;
                }

                &:nth-child(3) {
                    order: 2;
                    margin-right: 100px;
                }

                &:last-child {
                    order: 3;
                    margin-left: 100px;
                }
            }
            a {
                padding: 0 0.2em;
            }
        }
    }
}

/*
.site__logo*/

.nav-wrapper {
    -ms-user-select: none; // for removing double-click highlights
    -moz-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    display: inline-block;
    margin: 0 auto;
    overflow: hidden;
    @media (max-width: 720px) {
        max-height: 0;
        width: 100%;
   //   transform: scaleY(0);
   //     transform-origin: top;

  //      transition: transform 1s ease;

        transition: all 250ms cubic-bezier(0.42, 0, 0.58, 1);
    }

    //the block portion is needed for the element to center in its parent if width not 100%
    @media (min-width: 721px) {
        max-height: none;

    }
}

/**********************************************************
* CSS Implementation of site logo hover effects           *
* Pros: Faster than using jQuery; better for UI elements  *
* Cons: Can only do so much                               *
***********************************************************
*/

// actually in mobile, there's no reason to have hover/active.
// media queries for the win.

// @keyframes hovered {
//    from {opacity: 0;}
//    to {opacity: 1;}
// }

.logo--highlight {
    display: none;
//    visibility: hidden;
 //   height: 0;
//    opacity: 0;
 //   overflow: hidden;
  //  transition: all 0.3s ease;
}

.no-touch {

    .logo--status:hover .logo--highlight,
    .logo--status:active .logo--highlight {
        display: block;
    //    visibility: visible;
    //    height: auto;
   //     opacity: 1;
    //    animation: hovered 250ms ease-in-out both;
    }

    .logo--status:hover .logo--at-home,
    .logo--status:active .logo--at-home,
    .logo--status:hover .logo--basic,
    .logo--status:active .logo--basic {
        display: none;
   //     visibility: hidden;
    //    height: 0;
     //   opacity: 0;
     //   overflow: hidden;
    //    transition: all 0.3s ease;
    }
}

// active page
.active {
    background-color: $primary-color;
}


// hamburger menu
@media (max-width: 720px) {
    .hamburger-wrapper {
        position: absolute;
        top: 0;
        right: 5%;
    }

    .hamburger {
        border: none;
        outline: none;
        cursor: pointer;
        z-index: 200;  //needed because nav-wrapper covers the area.
      //  display: block;
        margin: auto;
        position: relative;
        width: 25px;
        height: 25px;
        background: #000;
     /*   transition: background 0.2s ease-in-out; */

        &:before {
            content: '';
            position: absolute;
            top: 20%;
            left: 0;
            width: 100%;
            height: 20%;
            background-color: $secondary-light;
            transition-property: transform, top;
            transition-duration: 0.2s;
            transition-timing-function: ease;
            transform: translateZ(0);
        }

        &:after {
            @extend .hamburger:before;
            top: 60%;
        }

        &:hover {
            &:before {
                @extend .hamburger:before;
                background-color: $primary-light;
            }
            &:after {
                @extend .hamburger:after;
                background-color: $primary-light;
            }
        }
    }

    .hamburger-wrapper.open .hamburger {
        background-color: $primary-color;
        &:before, &:after {
            top: 40%;
            transform: rotate(45deg);
            background-color: #000;
        }
        &:after {
            transform: rotate(-45deg);
        }
        &:hover {
            background-color: $primary-light;
        }
    }


    .hamburger-wrapper.open + .nav-wrapper {
        //if set to block, it sits at the bottom and not the top as it needs to be.
        max-height: 400px; // made this number larger to accomodate scaled instances (normally 260px)
    //    transform: scaleY(1);
    }
}

